--- a/demo/src/main/resources/com/example/demo/Login.fxml
+++ b/demo/src/main/resources/com/example/demo/Login.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
@@ -28,7 +31,7 @@
    <right>
       <AnchorPane prefHeight="400.0" prefWidth="300.0" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="110.0" layoutY="73.0" text="Secure Login">
+            <Label layoutX="93.0" layoutY="75.0" text="Secure Login">
                <font>
                   <Font size="18.0" />
                </font>
@@ -45,17 +48,35 @@
             </Label>
             <TextField fx:id="loginUsernameField" centerShape="false" layoutX="110.0" layoutY="138.0" promptText="username or email" />
             <PasswordField fx:id="loginPasswordField" layoutX="110.0" layoutY="187.0" promptText="password" />
-            <Button fx:id="loginLoginButton" layoutX="36.0" layoutY="250.0" mnemonicParsing="false" onAction="#loginAction" prefHeight="25.0" prefWidth="227.0" style="-fx-background-color: #263F73;" text="Login" textFill="#fffdfd">
+            <Button fx:id="loginLoginButton" layoutX="31.0" layoutY="272.0" mnemonicParsing="false" onAction="#loginAction" prefHeight="25.0" prefWidth="227.0" style="-fx-background-color: #263F73;" text="Login" textFill="#fffdfd">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button fx:id="loginCancelButton" layoutX="36.0" layoutY="295.0" mnemonicParsing="false" onAction="#cancelAction" prefHeight="25.0" prefWidth="227.0" style="-fx-background-color: #263F73;" text="Cancel" textFill="#fffdfd">
+            <Button fx:id="loginCancelButton" layoutX="31.0" layoutY="323.0" mnemonicParsing="false" onAction="#cancelAction" prefHeight="25.0" prefWidth="227.0" style="-fx-background-color: #263F73;" text="Cancel" textFill="#fffdfd">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
             <Label fx:id="loginLoginMessage" layoutX="112.0" layoutY="110.0" prefHeight="17.0" prefWidth="145.0" textFill="#eb0000" />
+            <RadioButton fx:id="loginRadioAdmin" layoutX="31.0" layoutY="237.0" mnemonicParsing="false" selected="true" text="Admin" textFill="#020202">
+               <toggleGroup>
+                  <ToggleGroup fx:id="Users" />
+               </toggleGroup>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </RadioButton>
+            <RadioButton fx:id="loginRadioStudent" layoutX="113.0" layoutY="237.0" mnemonicParsing="false" text="Student" toggleGroup="$Users">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </RadioButton>
+            <RadioButton fx:id="loginRadioTeacher" layoutX="195.0" layoutY="237.0" mnemonicParsing="false" text="Teacher" toggleGroup="$Users">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </RadioButton>
          </children>
       </AnchorPane>
    </right>
