--- a/demo/src/main/resources/com/example/demo/AdminDashboard.fxml
+++ b/demo/src/main/resources/com/example/demo/AdminDashboard.fxml
@@ -13,5 +13,6 @@
          </font>
       </Label>
       <Button fx:id="adminDashCancel" layoutX="181.0" layoutY="175.0" mnemonicParsing="false" onAction="#cancelAction" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #263F73;" text="Cancel" textFill="#fffefe" />
+      <Button fx:id="AssignCoursesBtn" layoutX="181.0" layoutY="210.0" mnemonicParsing="false" onAction="#coursesAction" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #263F73;" text="Assign/Offer Courses" textFill="#fffefe" />
    </children>
 </AnchorPane>
