--- a/demo/src/main/resources/com/example/demo/AdminDashboard.fxml
+++ b/demo/src/main/resources/com/example/demo/AdminDashboard.fxml
@@ -1,17 +1,120 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.AdminDashboardController">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="180.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.AdminDashboardController">
    <children>
-      <Label layoutX="178.0" layoutY="41.0" text="Admin Dashboard">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Button fx:id="adminDashCancel" layoutX="181.0" layoutY="175.0" mnemonicParsing="false" onAction="#cancelAction" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #263F73;" text="Cancel" textFill="#fffefe" />
+      <AnchorPane fx:id="adminAddCoursePane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false" AnchorPane.leftAnchor="180.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <children>
+            <Label layoutX="114.0" layoutY="32.0" text="Add Course">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="adminDashPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" AnchorPane.leftAnchor="180.0">
+         <children>
+            <Label fx:id="adminName" layoutX="74.0" layoutY="14.0" text="Admin Dashboard">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="adminAddTeacherPane" layoutX="180.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false" AnchorPane.leftAnchor="180.0">
+         <children>
+            <Label layoutX="98.0" layoutY="14.0" text="Add Teacher">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="55.0" layoutY="95.0" text="Name">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="55.0" layoutY="185.0" text="Username">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="55.0" layoutY="140.0" text="Email">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="55.0" layoutY="230.0" text="Password">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="addTPName" layoutX="130.0" layoutY="90.0" promptText="Teacher Name" />
+            <TextField fx:id="addTPEmail" layoutX="130.0" layoutY="135.0" promptText="Teacher Email" />
+            <TextField fx:id="addTPUsername" layoutX="130.0" layoutY="180.0" promptText="Username" />
+            <PasswordField fx:id="addTPPassword" layoutX="130.0" layoutY="225.0" promptText="Password" />
+            <Button fx:id="addTPAddButton" layoutX="130.0" layoutY="273.0" mnemonicParsing="false" onAction="#addTeacherButton" prefHeight="27.0" prefWidth="149.0" style="-fx-background-color: #263F73;" text="Add" textFill="WHITE">
+               <font>
+                  <Font name="Calibri" size="14.0" />
+               </font>
+            </Button>
+            <Button fx:id="addTPCancelButton" layoutX="130.0" layoutY="320.0" mnemonicParsing="false" onAction="#cancelTeacherButton" prefHeight="27.0" prefWidth="149.0" style="-fx-background-color: #263F73;" text="Cancel" textFill="WHITE">
+               <font>
+                  <Font name="Calibri" size="14.0" />
+               </font>
+            </Button>
+            <Label fx:id="addTPLabel" layoutX="130.0" layoutY="52.0" textFill="RED" />
+         </children>
+      </AnchorPane>
+      <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="180.0" style="-fx-background-color: #263F73;">
+         <children>
+            <Label layoutX="45.0" layoutY="23.0" text="Admin" textFill="WHITE">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Label>
+            <Button fx:id="adminDashCancel" layoutX="18.0" layoutY="254.0" mnemonicParsing="false" onAction="#cancelAction" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Log Out" textFill="#263f73">
+               <font>
+                  <Font name="Calibri" size="15.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button fx:id="adminDashCancel1" layoutX="18.0" layoutY="143.0" mnemonicParsing="false" onAction="#addTeacherPane" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Add Teacher" textFill="#263f73">
+               <font>
+                  <Font name="Calibri" size="15.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button fx:id="adminDashCancel11" layoutX="18.0" layoutY="200.0" mnemonicParsing="false" onAction="#addCoursePane" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Add Course" textFill="#263f73">
+               <font>
+                  <Font name="Calibri" size="15.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button fx:id="adminDashCancel12" layoutX="18.0" layoutY="90.0" mnemonicParsing="false" onAction="#dashboardPane" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Dashboard" textFill="#263f73">
+               <font>
+                  <Font name="Calibri" size="15.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
