--- a/demo/src/main/resources/com/example/demo/StudentDashboard.fxml
+++ b/demo/src/main/resources/com/example/demo/StudentDashboard.fxml
@@ -7,11 +7,11 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.StudentDashboardController">
    <children>
-      <Label layoutX="183.0" layoutY="50.0" text="Student Dashboard">
+      <Label fx:id="studentName" layoutX="183.0" layoutY="50.0" text="Student Dashboard">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="studentDashCancel" layoutX="193.0" layoutY="200.0" mnemonicParsing="false" onAction="#cancelAction" prefHeight="25.0" prefWidth="154.0" style="-fx-background-color: #263F73;" text="Cancel" textFill="WHITE" />
+      <Button fx:id="studentDashCancel" layoutX="193.0" layoutY="200.0" mnemonicParsing="false" onAction="#Logout" prefHeight="25.0" prefWidth="154.0" style="-fx-background-color: #263F73;" text="Log Out" textFill="WHITE" />
    </children>
 </AnchorPane>
