--- a/demo/src/main/resources/com/example/demo/TeacherDashboard.fxml
+++ b/demo/src/main/resources/com/example/demo/TeacherDashboard.fxml
@@ -7,11 +7,11 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.TeacherDashboardController">
    <children>
-      <Label layoutX="183.0" layoutY="51.0" text="Teacher Dashboard">
+      <Label fx:id="teacherName" layoutX="183.0" layoutY="51.0" text="Teacher Dashboard">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="teacherDashCancel" layoutX="185.0" layoutY="174.0" mnemonicParsing="false" onAction="#cancelAction" prefHeight="25.0" prefWidth="154.0" style="-fx-background-color: #263F73;" text="Cancel" textFill="WHITE" />
+      <Button fx:id="teacherDashCancel" layoutX="185.0" layoutY="174.0" mnemonicParsing="false" onAction="#Logout" prefHeight="25.0" prefWidth="154.0" style="-fx-background-color: #263F73;" text="Log Out" textFill="WHITE" />
    </children>
 </AnchorPane>
