--- a/demo/src/main/resources/com/example/demo/StudentDashboard.fxml
+++ b/demo/src/main/resources/com/example/demo/StudentDashboard.fxml
@@ -5,13 +5,85 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.ComboBox?>
 <AnchorPane prefHeight="400.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.StudentDashboardController">
    <children>
-      <Label fx:id="studentName" layoutX="183.0" layoutY="50.0" text="Student Dashboard">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Button fx:id="studentDashCancel" layoutX="193.0" layoutY="200.0" mnemonicParsing="false" onAction="#Logout" prefHeight="25.0" prefWidth="154.0" style="-fx-background-color: #263F73;" text="Log Out" textFill="WHITE" />
+      <AnchorPane fx:id="studentDashPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" AnchorPane.leftAnchor="180.0">
+         <children>
+            <Label fx:id="studentName" layoutX="74.0" layoutY="14.0" text="Student Dashboard">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="applyCoursesPane" layoutX="180.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false" AnchorPane.leftAnchor="180.0">
+         <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="0.0" style="-fx-background-color: #263F73;">
+            <children>
+               <Label layoutX="98.0" layoutY="14.0" text="Apply Courses">
+                  <font>
+                     <Font name="Calibri" size="24.0" />
+                  </font>
+               </Label>
+               <Label layoutX="55.0" layoutY="95.0" text="Course">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+               </Label>
+
+               <Label layoutX="55.0" layoutY="130.0" text="Teacher">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+               </Label>
+               <ComboBox fx:id="coursesMenu" layoutX="130.0" layoutY="95.0" prefWidth="150.0" promptText="Choose Course" />
+               <ComboBox fx:id="teachersMenu" layoutX="130.0" layoutY="130.0" prefWidth="150.0" promptText="Choose Teacher" />
+               <Button fx:id="applyBtn" layoutX="130.0" layoutY="165.0" mnemonicParsing="false" onAction="#applyAction" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #263F73;" text="Apply" textFill="#FFFFFF">
+                  <font>
+                     <Font name="Calibri" size="15.0" />
+                  </font>
+                  <cursor>
+                     <Cursor fx:constant="HAND" />
+                  </cursor>
+               </Button>
+            </children>
+         </AnchorPane>
+         <Label fx:id="applyCourseLabel" layoutX="132.0" layoutY="64.0" prefHeight="17.0" prefWidth="144.0" textFill="RED" />
+      </AnchorPane>
+      <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="180.0" style="-fx-background-color: #263F73;">
+         <children>
+            <Label layoutX="45.0" layoutY="23.0" text="Admin" textFill="WHITE">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Label>
+            <Button fx:id="studentDashCancel1" layoutX="18.0" layoutY="143.0" mnemonicParsing="false" onAction="#applyCourses" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Apply for Courses" textFill="#263f73">
+               <font>
+                  <Font name="Calibri" size="15.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button fx:id="studentDashCancel11" layoutX="18.0" layoutY="200.0" mnemonicParsing="false" onAction="#Logout" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Log Out" textFill="#263f73">
+               <font>
+                  <Font name="Calibri" size="15.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button fx:id="studentDashCancel12" layoutX="18.0" layoutY="90.0" mnemonicParsing="false" onAction="#dashboardPane" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Dashboard" textFill="#263f73">
+               <font>
+                  <Font name="Calibri" size="15.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
+-
