--- a/demo/src/main/resources/com/example/demo/AdminDashboard.fxml
+++ b/demo/src/main/resources/com/example/demo/AdminDashboard.fxml
@@ -8,7 +8,9 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import org.controlsfx.control.*?>
 
+<?import javafx.scene.control.cell.CheckBoxListCell?>
 <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="180.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.AdminDashboardController">
    <children>
       <AnchorPane fx:id="adminAddCoursePane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false" AnchorPane.leftAnchor="180.0">
@@ -59,6 +61,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
+
             <TextField fx:id="addTPName" layoutX="130.0" layoutY="90.0" promptText="Teacher Name" />
             <TextField fx:id="addTPEmail" layoutX="130.0" layoutY="135.0" promptText="Teacher Email" />
             <TextField fx:id="addTPUsername" layoutX="130.0" layoutY="180.0" promptText="Username" />
@@ -95,14 +98,16 @@
                      <Font size="14.0" />
                   </font>
                </Label>
-   
+
                <Label layoutX="55.0" layoutY="130.0" text="Teacher">
                   <font>
                      <Font size="14.0" />
                   </font>
                </Label>
+
                <ComboBox fx:id="coursesMenu" layoutX="130.0" layoutY="95.0" prefWidth="150.0" promptText="Choose Course" />
                <ComboBox fx:id="teachersMenu" layoutX="130.0" layoutY="130.0" prefWidth="150.0" promptText="Choose Teacher" />
+               <CheckComboBox fx:id = "sutdentsMenu" layoutX="130.0" layoutY="175.0" prefWidth="150.0"/>
                <Button fx:id="assignBtn" layoutX="130.0" layoutY="165.0" mnemonicParsing="false" onAction="#assignAction" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #263F73;" text="Assign" textFill="#FFFFFF">
                   <font>
                      <Font name="Calibri" size="15.0" />
@@ -115,6 +120,41 @@
          </AnchorPane>
          <Label fx:id="assignCourseLabel" layoutX="132.0" layoutY="64.0" prefHeight="17.0" prefWidth="144.0" textFill="RED" />
       </AnchorPane>
+      <AnchorPane fx:id="approveCoursesPane" layoutX="180.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false" AnchorPane.leftAnchor="180.0">
+         <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="0.0" style="-fx-background-color: #263F73;">
+            <children>
+               <Label layoutX="98.0" layoutY="14.0" text="Assign Courses">
+                  <font>
+                     <Font name="Calibri" size="24.0" />
+                  </font>
+               </Label>
+               <Label layoutX="55.0" layoutY="95.0" text="Course">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+               </Label>
+
+               <Label layoutX="55.0" layoutY="130.0" text="Teacher">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+               </Label>
+
+               <ComboBox fx:id="approveCoursesMenu" layoutX="130.0" layoutY="95.0" prefWidth="150.0" promptText="Choose Course" />
+               <ComboBox fx:id="approveTeachersMenu" layoutX="130.0" layoutY="130.0" prefWidth="150.0" promptText="Choose Teacher" />
+
+               <Button fx:id="approveBtn" layoutX="130.0" layoutY="165.0" mnemonicParsing="false" onAction="#assignAction" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #263F73;" text="Approve Applications" textFill="#FFFFFF">
+                  <font>
+                     <Font name="Calibri" size="15.0" />
+                  </font>
+                  <cursor>
+                     <Cursor fx:constant="HAND" />
+                  </cursor>
+               </Button>
+            </children>
+         </AnchorPane>
+         <Label fx:id="approveCourseLabel" layoutX="132.0" layoutY="64.0" prefHeight="17.0" prefWidth="144.0" textFill="RED" />
+      </AnchorPane>
       <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="180.0" style="-fx-background-color: #263F73;">
          <children>
             <Label layoutX="45.0" layoutY="23.0" text="Admin" textFill="WHITE">
@@ -122,7 +162,7 @@
                   <Font name="Calibri" size="24.0" />
                </font>
             </Label>
-            <Button fx:id="adminDashCancel" layoutX="18.0" layoutY="307.0" mnemonicParsing="false" onAction="#Logout" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Log Out" textFill="#263f73">
+            <Button fx:id="adminDashCancel" layoutX="18.0" layoutY="360.0" mnemonicParsing="false" onAction="#Logout" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Log Out" textFill="#263f73">
                <font>
                   <Font name="Calibri" size="15.0" />
                </font>
@@ -162,6 +202,15 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
+            <Button fx:id="adminDashCancel21" layoutX="18.0" layoutY="307.0" mnemonicParsing="false" onAction="#approveCourses" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Approve Applications" textFill="#263f73">
+               <font>
+                  <Font name="Calibri" size="15.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+
          </children>
       </AnchorPane>
    </children>
