--- a/demo/src/main/resources/com/example/demo/StudentDashboard.fxml
+++ b/demo/src/main/resources/com/example/demo/StudentDashboard.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.ComboBox?>
 <AnchorPane prefHeight="400.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.StudentDashboardController">
    <children>
       <AnchorPane fx:id="studentDashPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" AnchorPane.leftAnchor="180.0">
@@ -31,12 +31,6 @@
                      <Font size="14.0" />
                   </font>
                </Label>
-
-               <Label layoutX="55.0" layoutY="130.0" text="Teacher">
-                  <font>
-                     <Font size="14.0" />
-                  </font>
-               </Label>
                <ComboBox fx:id="coursesMenu" layoutX="130.0" layoutY="95.0" prefWidth="150.0" promptText="Choose Course" />
                <ComboBox fx:id="teachersMenu" layoutX="130.0" layoutY="130.0" prefWidth="150.0" promptText="Choose Teacher" />
                <Button fx:id="applyBtn" layoutX="130.0" layoutY="165.0" mnemonicParsing="false" onAction="#applyAction" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #263F73;" text="Apply" textFill="#FFFFFF">
@@ -53,12 +47,12 @@
       </AnchorPane>
       <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="180.0" style="-fx-background-color: #263F73;">
          <children>
-            <Label layoutX="45.0" layoutY="23.0" text="Admin" textFill="WHITE">
+            <Label layoutX="45.0" layoutY="23.0" text="Student" textFill="WHITE">
                <font>
                   <Font name="Calibri" size="24.0" />
                </font>
             </Label>
-            <Button fx:id="studentDashCancel1" layoutX="18.0" layoutY="143.0" mnemonicParsing="false" onAction="#applyCourses" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Apply for Courses" textFill="#263f73">
+            <Button fx:id="studentAppCoursesBtn" layoutX="18.0" layoutY="143.0" mnemonicParsing="false" onAction="#applyCourses" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Apply for Courses" textFill="#263f73">
                <font>
                   <Font name="Calibri" size="15.0" />
                </font>
@@ -66,7 +60,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="studentDashCancel11" layoutX="18.0" layoutY="200.0" mnemonicParsing="false" onAction="#Logout" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Log Out" textFill="#263f73">
+            <Button fx:id="studentDashLogout" layoutX="18.0" layoutY="200.0" mnemonicParsing="false" onAction="#Logout" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Log Out" textFill="#263f73">
                <font>
                   <Font name="Calibri" size="15.0" />
                </font>
@@ -74,7 +68,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="studentDashCancel12" layoutX="18.0" layoutY="90.0" mnemonicParsing="false" onAction="#dashboardPane" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Dashboard" textFill="#263f73">
+            <Button fx:id="studentDashBtn" layoutX="18.0" layoutY="90.0" mnemonicParsing="false" onAction="#dashboardPane" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Dashboard" textFill="#263f73">
                <font>
                   <Font name="Calibri" size="15.0" />
                </font>
@@ -86,4 +80,3 @@
       </AnchorPane>
    </children>
 </AnchorPane>
--
