--- a/demo/src/main/resources/com/example/demo/StudentDashboard.fxml
+++ b/demo/src/main/resources/com/example/demo/StudentDashboard.fxml
@@ -3,8 +3,11 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -53,6 +56,14 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
+            <Button fx:id="submitFeedback" layoutX="18.0" layoutY="186.0" mnemonicParsing="false" onAction="#feedbackPane" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Submit Feedback" textFill="#263f73">
+               <font>
+                  <Font name="Calibri" size="15.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="enStudentsPane" layoutX="180.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false">
@@ -68,6 +79,71 @@
                  <TableColumn fx:id="enTableCourseRequest" prefWidth="161.33331298828125" text="Request" />
               </columns>
             </TableView>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="submitFeedbackPane" layoutX="180.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false">
+         <children>
+            <Label fx:id="studentName2" layoutX="74.0" layoutY="14.0" text="Submit Feedback">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Label>
+            <TableView fx:id="submitFeedbackTable" layoutY="70.0" prefHeight="331.0" prefWidth="340.0">
+              <columns>
+                <TableColumn fx:id="feedbackCourse" prefWidth="117.3333740234375" text="Course" />
+                <TableColumn fx:id="feedbackStatus" prefWidth="106.0" text="Status" />
+                  <TableColumn fx:id="feedbackSubmit" prefWidth="115.33331298828125" text="Submit" />
+              </columns>
+            </TableView>
+         </children>
+      </AnchorPane>
+    <AnchorPane fx:id="FeedbackForm" minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="520.0" style="-fx-background-color: #FFFFFF;" visible="false">
+         <children>
+            <Label alignment="CENTER" prefHeight="40.0" prefWidth="520.0" style="-fx-background-color: #263F73;" text="Feedback Form" textFill="WHITE">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="47.0" text="Q1- Is your teacher good at Teaching?">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <RadioButton fx:id="Q1Yes" layoutX="14.0" layoutY="77.0" mnemonicParsing="false" selected="true" text="Yes">
+               <toggleGroup>
+                  <ToggleGroup fx:id="Q1" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton fx:id="Q1No" layoutX="14.0" layoutY="107.0" mnemonicParsing="false" text="No" toggleGroup="$Q1" />
+            <RadioButton fx:id="Q1NotSure" layoutX="14.0" layoutY="137.0" mnemonicParsing="false" text="Not Sure" toggleGroup="$Q1" />
+            <Label layoutX="14.0" layoutY="167.0" text="Q2- Is your Teacher fair at marking?">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <RadioButton fx:id="Q2Yes" layoutX="14.0" layoutY="197.0" mnemonicParsing="false" text="Yes">
+               <toggleGroup>
+                  <ToggleGroup fx:id="Q2" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton fx:id="Q2No" layoutX="15.0" layoutY="227.0" mnemonicParsing="false" selected="true" text="No" toggleGroup="$Q2" />
+            <Label layoutX="15.0" layoutY="257.0" text="Q3 - Extra Comments">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextArea fx:id="Q3Text" layoutX="15.0" layoutY="277.0" prefHeight="110.0" prefWidth="221.0" promptText="Comments" />
+            <Button layoutX="308.0" layoutY="359.0" mnemonicParsing="false" onAction="#FeedbackSubmit" prefHeight="28.0" prefWidth="69.0" style="-fx-background-color: #263F73;" text="Submit" textFill="WHITE">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="385.0" layoutY="359.0" mnemonicParsing="false" onAction="#FeedbackCancel" prefHeight="28.0" prefWidth="69.0" style="-fx-background-color: #263F73;" text="Cancel" textFill="WHITE">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Label fx:id="FeedbackAlertLabel" layoutX="260.0" layoutY="97.0" prefHeight="20.0" prefWidth="84.0" textFill="#ed0000" />
          </children>
       </AnchorPane>
    </children>
